last version before integration with PicoLisp distribution

--- a/epil-ref.org
+++ b/epil-ref.org
@@ -202,5 +202,12 @@
 |         |        | <30>                           |
 |         |        |                                |
 
+** CALC (/Emacs Remote Control/)
 
+| entitiy | action | comment                        |
+|---------+--------+--------------------------------|
+|         |        | <30>                           |
+|         |        |                                |
+
+  
 
